--- a/backend/package.json
+++ b/backend/package.json
@@ -8,21 +8,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "redis": "^4.6.13",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1",
-    "redis": "^4.6.13"
-  },
-  "lint-staged": {
-    "**/*.{js,ts,jsx,tsx}": [
-      "npx prettier --write",
-      "eslint --fix"
-    ]
+    "nodemon": "^3.0.1"
   },
   "scripts": {
     "test": "jest --watchAll  --detectOpenHandles --verbose --coverage ",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "check": "prettier --check .",
     "format": "prettier --write .",
     "vercel-build": "echo yay"
@@ -35,16 +28,12 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
-    "@stylistic/eslint-plugin-js": "^2.1.0",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.3.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "globals": "^15.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
+    "prettier": "^3.1.0",
     "supertest": "^6.3.3"
   }
 }
